Limit properties to 20kb, display an error when data is invalid in db

--- a/templates/kraken/configuration/latest/add-property.twig
+++ b/templates/kraken/configuration/latest/add-property.twig
@@ -91,7 +91,7 @@
                         </li>
                        <li>
                             <label for="config-float">{{ 'float'|formatSchemaType }}</label>
-                            <input type="number" name="value_float" id="config-float" value="{{ form.value_float }}" class="text-input" autocomplete="off" step="0.01">
+                            <input type="number" name="value_float" id="config-float" value="{{ form.value_float }}" class="text-input" autocomplete="off">
                         </li>
                     </ul>
                 </li>
