--- a/templates/kraken/configuration/latest/property.twig
+++ b/templates/kraken/configuration/latest/property.twig
@@ -26,7 +26,7 @@
     <h4>Current Value</h4>
     {{ kraken_macros.renderProperty(property) }}
 
-    <h2 class="mbn">Deployed History</h2>
+    <h2 class="mbn">Deployment History</h2>
     <h5 class="mts">Most recent values</h5>
     {{ block('property_history') }}
 
