Stupid line height bs

--- a/sass/patterns/_list.scss
+++ b/sass/patterns/_list.scss
@@ -45,6 +45,7 @@
 // List of code or preformatted
 .code-list {
     list-style-type: square;
+    line-height: 180%;
     margin-bottom: 0;
     margin-left: 1em;
 }
