Allow single string property to be expanded
- Allows newlines/tabs to be entered

--- a/sass/patterns/_buttons.scss
+++ b/sass/patterns/_buttons.scss
@@ -53,6 +53,7 @@ $btn-color-transparent: rgba(255, 255, 255, .1);
 
 // Basic button modifiers
 .btn--tiny {
+    font-size: ms(-2);
     margin: 0;
     margin-top: -5px;
     padding: ms(-12) ms(-8);
