--- a/templates/kraken/application/status.twig
+++ b/templates/kraken/application/status.twig
@@ -85,7 +85,7 @@
                             </ul>
 
                             <p class="mbn">
-                                <a href="{{ urlFor('kraken.configuration.latest', {application: application.id, environment: target.environment.id})}}">Latest Configuration</a>
+                                <a class="btn btn--small" href="{{ urlFor('kraken.configuration.latest', {application: application.id, environment: target.environment.id})}}">Latest Configuration</a>
                             </p>
                         </section>
                     </article>
