Move kraken config into dedicated directory

--- a/sass/_settings.scss
+++ b/sass/_settings.scss
@@ -19,6 +19,10 @@ $btn-border-width: 1px;
 $btn-hover-background-color: tint($blue, 10%);
 $btn-hover-text-color: $white;
 
+// Scales - tables
+
+$table-stripe-color: $light-grey;
+
 // Headings
 $h1-size: ms(5);
 $h2-size: ms(4);
