--- a/templates/user/github.token.remove.twig
+++ b/templates/user/github.token.remove.twig
@@ -11,7 +11,7 @@
         <p>This will revoke GitHub authorization and disable updates to GitHub when you deploy a build.</p>
 
         <form method="post">
-            <input class="btn--destructive" type="submit" value="Remove">
+            <input class="btn btn--destructive" type="submit" value="Remove">
         </form>
         <a href="javascript:history.go(-1)">Cancel</a>
     </div>
