--- a/templates/kraken/configuration/latest/configuration.twig
+++ b/templates/kraken/configuration/latest/configuration.twig
@@ -6,7 +6,7 @@
 
 {% block content %}
 
-    <h1>Latest Configuration for <strong>{{ environment.name }}</strong></h1>
+    <h1>{{ page_title }} for <strong>{{ environment.name }}</strong></h1>
 
     <h4>Application</h4>
     <p>{{ application.name }}</p>
