--- a/templates/kraken/application/schema/schema.twig
+++ b/templates/kraken/application/schema/schema.twig
@@ -54,7 +54,7 @@
 
                         {% if isAdmin %}
                             <td class="tr">
-                                <a href="{{ urlFor('kraken.schema.edit', {application: application.id, schema: schema.id}) }}">
+                                <a href="{{ urlFor('kraken.schema.edit', {schema: schema.id}) }}">
                                     Edit <span class="tablesaw-collapse">Property Schema</span>
                                 </a>
                             </td>
