--- a/templates/kraken/application/schema/schema.edit.twig
+++ b/templates/kraken/application/schema/schema.edit.twig
@@ -43,7 +43,7 @@
 
             <ul class="button-list">
                 <li><input class="btn btn--action" type="submit" value="Save Changes"></li>
-                <li class="button-list__fixed"><a class="btn btn--secondary" href="{{ urlFor('kraken.schema', {application: application.id, schema: schema.id}) }}">Cancel</a></li>
+                <li class="button-list__fixed"><a class="btn btn--secondary" href="{{ urlFor('kraken.schema', {application: application.id}) }}">Cancel</a></li>
             </ul>
 
         </form>
@@ -58,7 +58,7 @@
                 {% for property in properties %}
                 <li>
                     {{ property.environment.name }}
-                    (<a href="{{ urlFor('kraken.property', {application: application.id, property: property.id}) }}">View Latest Configuration</a>)
+                    (<a href="{{ urlFor('kraken.property', {property: property.id}) }}">View Latest Configuration</a>)
                 </li>
             {% endfor %}
         </ul>
@@ -68,7 +68,7 @@
 
     {% if isAdmin %}
         <p>
-            <a class="btn btn--destructive" href="{{ urlFor('kraken.schema.remove', {application: application.id, schema: schema.id}) }}">Remove property from schema</a></li>
+            <a class="btn btn--destructive" href="{{ urlFor('kraken.schema.remove', {schema: schema.id}) }}">Remove property from schema</a></li>
         </p>
     {% endif %}
 {% endblock %}
