--- a/templates/kraken/partial/configuration.twig
+++ b/templates/kraken/partial/configuration.twig
@@ -25,7 +25,7 @@
 
                         {% if show_property_link %}
                             <td>
-                                <a href="{{ urlFor('kraken.property', {application: application.id, property: property.id}) }}">
+                                <a href="{{ urlFor('kraken.property', {property: property.id}) }}">
                                     {{ macros.icon('list') }}
                                     <span class="tablesaw-collapse">Manage Property Schema</span>
                                 </a>
